---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2024-11-18
  Changes:
    - Recipes intended only for the Sandboxes are now always toggled just in time
    - Item requests are now handled with the newer planning APIs
  Bugfixes:
    - Potentially reduced scenarios where pre-Sandbox character information is lost
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2024-11-12
  Changes:
    - Cannot enter the Sandbox while using a jetpack
  Bugfixes:
    - UI now prefers to precede all others
    - Potentially resolved hidden recipes after updating while in a Sandbox
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2024-11-02
  Changes:
    - Russian translations (thanks Kirill)
  Bugfixes:
    - Maximum widths for UI, to handle interactions with other mod UIs better
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2024-10-31
  Bugfixes:
    - Cannot enter the Sandbox while watching any cutscenes
    - Cannot enter the Sandbox while riding a rocket
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2024-10-27
  Changes:
    - A fixed Tile Planner for Empty Space, enabling more Platform-related functionality
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-10-27
  Bugfixes:
    - Revert Tile Planner for Empty Space; pending bug reports for Factorio
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-10-27
  Changes:
    - A new Tile Planner for Empty Space, enabling more Platform-related functionality
  Bugfixes: